@@ -16,8 +16,8 @@ $EM_CONF[$_EXTKEY] = [
             'typo3' => '11.5.0-12.4.99',
         ],
         'suggests' => [
-            'typo3db_legacy' => '1.0.0-1.1.99',
-            'fh_debug' => '0.12.0-0.14.99',
+            'typo3db_legacy' => '1.0.0-1.2.99',
+            'fh_debug' => '0.12.0-0.16.99',
         ],
     ]
 ];
