@@ -1,3 +1,6 @@
+2023-10-23 Franz Holzinger  <franz@ttproducts.de>
+    * bugfix: remove endless loop from DebugApi::myDebug. No call of any SQL function is allowed to be called from here.
+
 2023-09-23 Franz Holzinger  <franz@ttproducts.de>
     * bugfix: show a Doctrine exception as ERROR in the debug output
 
